FieldValidatorVisitor